#+title: corfu.el - Changelog
#+author: Daniel Mendler
#+language: en

* Development

- corfu-popupinfo: Faster scrolling speed.
- corfu-popupinfo: Fix Emacs 30 deprecation warning.
- Experimental: Use new function =set-frame-size-and-position-pixelwise= if
  available. The patch can be downloaded from here:
  https://lists.gnu.org/archive/html/emacs-devel/2025-12/msg00359.html

* Version 2.6 (2025-12-07)

- Bugfixes.
- Add name to Corfu child frame to improve readability of =(frame-list)=.
- TTY: Fix child frame misalignment due to internal border.
- TTY: Hide frame immediately.
- TTY: Adjust default faces for low-color terminals.

* Version 2.5 (2025-11-15)

- =corfu-auto-trigger=: New customization variable to trigger immediate completion
  after certain characters. See also =cape-capf-trigger=.
- =corfu-on-exact-match=: Change default from =insert= to =nil=, which is more
  compatible with auto completion and template/snippet/abbreviation expansion.
- Improve compatibility with Eglot. Fix a manual completion bug in the case when
  Eglot provided no matching candidates.
- Experimental: Use new function =set-frame-position-and-size= if available.

* Version 2.4 (2025-10-13)

- Require Emacs 29.1.
- Handle mixed tty/graphical displays.
- Do not enable Corfu in read-only buffers.

* Version 2.3 (2025-06-12)

- Minor corrections and fixes.

* Version 2.2 (2025-05-26)

- Guard Corfu hooks to automatically print stack traces in order to ease
  debugging.

* Version 2.1 (2025-04-22)

- =corfu-history-duplicate= and =corfu-history-decay=: New customization options to
  adjust the rank of duplicate history elements, such that they appear earlier
  in the completion list.
- =corfu-history-mode=: Add =corfu-history= to =savehist-minibuffer-history-variables=
  in order to save the history if =savehist-mode= is enabled.

* Version 2.0 (2025-03-28)

- ~corfu-quick~: Ensure that popup does not move.

* Version 1.7 (2025-01-28)

- Bugfixes only.

* Version 1.6 (2024-12-22)
