@@ -6,6 +6,7 @@
 
 - corfu-popupinfo: Faster scrolling speed.
 - corfu-popupinfo: Fix Emacs 30 deprecation warning.
+- Work around Emacs bug#79792, where the ~*Help*~ buffer is replaced unexpectedly.
 - Experimental: Use new function =set-frame-size-and-position-pixelwise= if
   available. The patch can be downloaded from here:
   https://lists.gnu.org/archive/html/emacs-devel/2025-12/msg00359.html
